syntax = "proto3";

package user;

option go_package = "./api/user-service";

import "google/protobuf/timestamp.proto";

enum Role {
    USER = 0;
    ADMIN = 1;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    Role role = 4; // user / admin
    google.protobuf.Timestamp created_at = 5;
}

message RegisterUserRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

message RegisterUserResponse {
    User user = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message GetUserByEmailResponse {
    User user = 1;
}

message ListUsersRequest {}
message ListUsersResponse {
    repeated User users = 1;
}

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc GetUserByEmail(GetUserByEmailRequest) returns(GetUserByEmailResponse);
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

